[project]
name = "linkedin-poster"
version = "0.1.0"
description = "LinkedIn posting backend for social media poster"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.7",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.30",
    "tavily-python>=0.3.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
linkedin-poster = "linkedin_poster:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 